--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 <body>
     <!--Шапка-->
     <header class="header">
-        <a href="">
-            <svg class="logo">
-                <use href=""></use>
+        <!--<a href="">
+            <svg class="logo" width="144" height="27">
+                <use href="./images/icons.svg#icon-Modern-Site-1"></use>
             </svg>
         </a>
         <a href="">
-            <svg class="header-decor">
-                <use href=""></use>
+            <svg class="header-decor" width="43" height="8">
+                <use href="./images/icons.svg#icon-Group-28-1"></use>
             </svg>
-        </a>
-        <h1>Purpose-driven experiences convert customer attention and loyalty</h1>
+        </a>--->
+        <h1 class="header-title">Purpose-driven experiences convert customer attention and loyalty</h1>
         <p>Modernsite designs and develops beautifully designed and cutting-edge e-commerce and small business websites around
         customer needs.</p>
         <button type="button">Start Growing</button>
@@ -173,7 +173,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <!--<footer>
         <div>
             <a href=""></a>
             <p></p>
@@ -205,7 +205,7 @@
             </ul>
             <ul></ul>
         </div>
-    </footer>
+    </footer>-->
 
 </body>
 </html>
